@@ -2,9 +2,9 @@ package com.ontrexdex.trexbot.commands;
 
 import com.ontrexdex.trexbot.CommandManager;
 import com.ontrexdex.trexbot.Config;
+
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
-
 
 import java.util.Arrays;
 import java.util.List;
@@ -18,32 +18,45 @@ public class HelpCommand implements ICommand {
     public void handle(CommandContext ctx) {
         List<String> args = ctx.getArgs();
         TextChannel channel = ctx.getMessage().getChannel().asTextChannel();
-
         if (args.isEmpty()){
-            StringBuilder sbuilder = new StringBuilder();
             EmbedBuilder ebuilder = new EmbedBuilder()
                     .setTitle("📄 __**Command List**__ 📄");
-            ebuilder.setColor(0xf98100);
-
-            sbuilder.append("__List of commands__\n");
+            ebuilder.setColor(0x3341f0);
             manager.getCommand().stream().map(ICommand::getName).forEach(
-                    (it) -> ebuilder.appendDescription("__").appendDescription(Config.get("PREFIX")).appendDescription(it)
-                            .appendDescription("__ - " + manager.getCommand(it).getHelp()).appendDescription("\n")
-                            .appendDescription("**Aliases**: " + manager.getCommand(it).getAliases().toString()
-                                    .replace("["," ").replace("]",""))
-                            .appendDescription("\n"));
-
+                    (it) -> ebuilder
+                            // Prefix + Command
+                            .appendDescription("> **__")
+                            .appendDescription(Config.get("PREFIX")).appendDescription(it)
+                            .appendDescription("__**: "
+                            // Description Text
+                            + manager.getCommand(it).getHelp().split("\n")[0])
+                            .appendDescription("\n")
+                            // Usage Text
+                            .appendDescription("> Usage: `" +
+                                    manager.getCommand(it).getHelp()
+                                    .substring(
+                                            manager.getCommand(it).getHelp()
+                                                    .indexOf(Config.get("PREFIX")
+                                                            + manager.getCommand(it).getName())
+                                    )
+                                    + "`")
+                            .appendDescription("\n")
+                            // Aliases Text
+                            .appendDescription("> Aliases: " + manager.getCommand(it).getAliases().toString()
+                                    .replace("["," *").replace("]","") + "*")
+                            .appendDescription("\n \n"));
             channel.sendMessageEmbeds(ebuilder.build()).queue();
             return;
         }
 
-        String search = args.get(0);
+        String search = args.getFirst();
         ICommand command = manager.getCommand(search);
 
         if (command == null){
-            channel.sendMessage("No Command found for " + Config.get("PREFIX") + "" + search).queue();
+            channel.sendMessage("No Command found for " + Config.get("PREFIX") + search).queue();
         }
 
+        assert command != null;
         channel.sendMessage(command.getHelp()).queue();
     }
 
@@ -54,8 +67,8 @@ public class HelpCommand implements ICommand {
 
     @Override
     public String getHelp() {
-        return "Prints out a list of commands\n" +
-                "`" + Config.get("PREFIX") + "help [command]`";
+        return "List all Commands." + "\n"
+                + Config.get("PREFIX") + getName();
     }
 
     @Override
